Drupal 8.4.0, 2017-10-04
------------------------
### Drush users: Update to Drush 8.1.12+ or higher

[Versions of Drush earlier than 8.1.12 will not work with Drupal
8.4.x](https://www.drupal.org/node/2874827). Update Drush to 8.1.12 or higher
**before using it to update to Drupal core 8.4.x** or you will encounter fatal
errors that prevent updates from running.

* If Drush is installed globally (i.e., generally available on the web host),
  Drush 8.1.12 and higher will successfully update Drupal 8.3.x to 8.4.0, but
  users may still see [other error messages after updates have
  run](https://github.com/drush-ops/drush/issues/2933).)
* If the site is built with Composer and includes Drush as a local dependency
  (less common), you should update your `composer.json` file to require at
  least [Drush 8.1.15](https://github.com/drush-ops/drush/releases/tag/8.1.15).
  Drush 8.1.14 will not work in the same composer project as Drupal 8.4.

### Updated browser requirements: Internet Explorer 9 and 10 no longer supported

In April 2017, Microsoft discontinued all support for Internet Explorer 9 and
10. Therefore, [Drupal 8.4 has as well](https://www.drupal.org/node/2842298).
Drupal 8.4 still mostly works in these browser versions, but bugs that affect
them only will no longer be fixed, and existing workarounds for them will
be removed beginning in Drupal 8.5.

Additionally, Drupal 8's [browser requirements documentation
page](https://www.drupal.org/docs/8/system-requirements/browser-requirements)
currently lists incorrect information regarding very outdated browser versions
such as Safari 5 and Firefox 5. [Clarifications to the browser policy and
documentation](https://www.drupal.org/node/2390621) are underway.

### Known Issues

Drupal 8.4.0 includes major version updates for two dependencies:
Symfony 3.2 and jQuery 3. Both updates may introduce backwards compatibility
issues for some sites or modules, so test carefully. For more information, see